# Qlickr

./: .env.sample  .gitignore  README.md
backend/: .coveragerc  .dockerignore  Dockerfile.dev  Dockerfile.prod  pyproject.toml  requirements.txt  tox.ini
backend/app/: admin.py  authentication.py  consumers.py  models.py  resources.py  routing.py  serializers.py  tasks.py  urls.py  views.py  viewsets.py
backend/app/management/commands/: evaluate.py
backend/app/migrations/: 0001_initial.py
backend/app/templates/email/: password_request.html
backend/app/tests/: test_api_health.py  test_api_instructor_dashboard.py  test_api_instructor_lesson.py  test_api_instructor_quiz.py  test_api_student_me.py  test_api_student_response.py  test_api_token_login.py  test_api_token_logout.py  test_api_token_refresh.py  test_api_user_me.py  test_api_user_password_request.py  test_api_user_password_reset.py  test_api_user_register.py  test_api_websocket_ticket.py  test_ws_instructor.py  test_ws_student.py  utils.py
backend/project/: settings.py
backend/project/middlewares/: channels.py
backend/scripts/: entry.api.dev.sh  entry.api.prod.sh  entry.celery.sh  entry.flower.sh  entry.ws.dev.sh  entry.ws.prod.sh  entrypoint.prod.sh  health.api.sh  health.celery.sh  test.sh
compose/: certbot.yml  dev.yml  prod.yml
confs/: cerbot.conf  dev.conf  prod.conf  redis.conf
frontend/: Dockerfile.prod  env.d.ts  index.html  package-lock.json  package.json
frontend/nginx/: prod.conf
frontend/src/: App.vue  constants.ts  http.ts  main.ts  types.ts  (+1 more)
scripts/: cert-init.sh  cert-renew.sh
(+19 files in other folders)
