[project]
name = "backend"
version = "0.1.0"
description = "qlickr backend"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "channels>=4.3.1",
    "channels-redis>=4.3.0",
    "coverage>=7.10.4",
    "daphne>=4.2.1",
    "django>=5.2.5",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "django-import-export>=4.3.9",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "flake8>=7.3.0",
    "flower>=2.0.1",
    "gunicorn>=23.0.0",
    "hiredis>=3.2.1",
    "psycopg2-binary>=2.9.10",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "locust>=2.38.1",
]
